namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobmatch
  labels:
    name: jobmatch
